# WebMRISeq

./: .gitignore  CMakeLists.txt  README.md  backend.cpp  backend.h  compile.sh  configure.sh  env.sh  main.cpp  package.json  serve.sh  webpack.config.js
backend/: RESTserver.jl  ServerFunctions.jl
client/: webpack.config.js
client/src/: index.html  index.js  main.js  style.js  styles.css  utils.js
client/src/seqEditor/: CMakeLists.txt  backend.cpp  backend.h  vcpkg-configuration.json
client/src/seqEditor/qml/: BlockItem.qml  BlockMenu.qml  ButtonsMenu.qml  ConfigMenu.qml  DeleteButton.qml  GlobalMenu.qml  Main.qml  ScannerMenu.qml  SimulatorMenu.qml  TextInputItem.qml  VariablesMenu.qml
client/src/vtkjs/: cono.js  index.js
docs/: api.yaml
examples/sequences/: GE_EPI_singleshot.json  SE.json
frontend/: package.json
frontend/src/: style.js  styles.css  utils.js
frontend/src/seqEditor/: backend.cpp  main.cpp  vcpkg.json
frontend/src/seqEditor/qml/: ButtonsMenu.qml  ComboBoxItem.qml  DeleteButton.qml  Main.qml  PopUp.qml  ScannerMenu.qml  SimulatorMenu.qml  VariablesMenu.qml
qml/: BlockItem.qml  ButtonsMenu.qml  ComboBoxItem.qml  ConfigMenu.qml  ConfigMenu.qml.autosave  DeleteButton.qml  GlobalMenu.qml  LoadedSequence.qml  Main.qml  MenuLabel.qml  PopUp.qml  Seq_Example.qml
server/: Manifest.toml  Project.toml  RESTServer.jl  Sequences.jl  ServerFunctions.jl
src/: cono.js  controlPanel.html  index.html  index_vtk.js  main.js  phantom_vtk.js
src/seqEditor/qml/: MenuLabel.qml  PopUp.qml  Seq_Example.qml  TextInputItem.qml
